Chore: 검증 로직 구현 후 SharedCalendarSevice 로직 수정